# fernando.torres

./: .gitignore  pyproject.toml
Docscriados/: combined_content.md  noticias_filtradas.md  noticias_raw.md  post_instagram.md  post_linkedin.md  scrap.md
pesquisador-guardrails/: app.py
pesquisador-guardrails/Docscriados/: combined_content.md  noticias_filtradas.md  noticias_raw.md  post_instagram.md  post_linkedin.md  scrap.md
pesquisador-guardrails/modules/: instagram.py  linkedin.py  pesquisador.py  scraper.py
pesquisador-guardrails/utils/: guardrails.py
