[project]
name = "pesquisador-guardrails-pos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai-tools>=0.17.0",
    "crewai>=0.85.0",
    "openai>=1.57.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.40.2",
    "guardrails-api-client==0.4.0a1",
    "guardrails-ai==0.6.0",
]
